# fiware-meteoroid-cli

./: .flake8  .travis.yml  Pipfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py
meteoroid_cli/: main.py
meteoroid_cli/meteoroid/v1/: endpoint.py  errors.py  function.py  result.py  schedule.py  subscription.py
meteoroid_cli/meteoroid/v1/client/: base.py  endpoint_client.py  function_client.py  result_client.py  schedule_client.py  subscription_client.py
