[metadata]
name = meteoroid-cli
summary = CLI Client app for Meteoroid which is one of FIWARE components
author = Okinawa Open Laboratory
author-email = sample@sample

[files]
packages = 
    meteoroid_cli

[entry_points]
console_scripts =
    meteoroid = meteoroid_cli.main:main

meteoroid.command =
    endpoint_create = meteoroid_cli.meteoroid.v1.endpoint:EndpointCreate
    endpoint_show = meteoroid_cli.meteoroid.v1.endpoint:EndpointShow
    endpoint_list = meteoroid_cli.meteoroid.v1.endpoint:EndpointList
    endpoint_delete = meteoroid_cli.meteoroid.v1.endpoint:EndpointDelete
    subscription_create = meteoroid_cli.meteoroid.v1.subscription:SubscriptionCreate
    subscription_show = meteoroid_cli.meteoroid.v1.subscription:SubscriptionShow
    subscription_list = meteoroid_cli.meteoroid.v1.subscription:SubscriptionList
    subscription_delete = meteoroid_cli.meteoroid.v1.subscription:SubscriptionDelete
    result_show = meteoroid_cli.meteoroid.v1.result:ResultShow
    result_list = meteoroid_cli.meteoroid.v1.result:ResultList
    function_show = meteoroid_cli.meteoroid.v1.function:FunctionShow
    function_list = meteoroid_cli.meteoroid.v1.function:FunctionList
