[metadata]
name = meteoroid-cli
summary = CLI Client app for Meteoroid which is one of FIWARE components
author = Okinawa Open Laboratory
author-email = sample@sample

[files]
packages =
    meteoroid_cli

[entry_points]
console_scripts =
    meteoroid = meteoroid_cli.main:main

meteoroid.command =
    result_show = meteoroid_cli.meteoroid.v1.result:ResultShow
    result_list = meteoroid_cli.meteoroid.v1.result:ResultList
    function_show = meteoroid_cli.meteoroid.v1.function:FunctionShow
    function_list = meteoroid_cli.meteoroid.v1.function:FunctionList
    function_create = meteoroid_cli.meteoroid.v1.function:FunctionCreate
