[metadata]
name = meteoroid-cli
version = 1.0.1
url = http://github.com/OkinawaOpenLaboratory/fiware-meteoroid-cli
summary = CLI Client app for Meteoroid which is one of FIWARE components
author = Okinawa Open Laboratory
author-email = fiware-meteoroid-member@okinawaopenlabs.org
maintainer = Okinawa Open Laboratory
maintainer-email = fiware-meteoroid-member@okinawaopenlabs.org
description-file = README.rst
license = AGPL v3
classifiers =
    Environment :: Console
    Natural Language :: English
    Natural Language :: Japanese
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Affero General Public License v3

[files]
packages =
    meteoroid_cli

[entry_points]
console_scripts =
    meteoroid = meteoroid_cli.main:main

meteoroid.command =
    schedule_create = meteoroid_cli.meteoroid.v1.schedule:ScheduleCreate
    schedule_show = meteoroid_cli.meteoroid.v1.schedule:ScheduleShow
    schedule_list = meteoroid_cli.meteoroid.v1.schedule:ScheduleList
    schedule_delete = meteoroid_cli.meteoroid.v1.schedule:ScheduleDelete
    endpoint_create = meteoroid_cli.meteoroid.v1.endpoint:EndpointCreate
    endpoint_show = meteoroid_cli.meteoroid.v1.endpoint:EndpointShow
    endpoint_list = meteoroid_cli.meteoroid.v1.endpoint:EndpointList
    endpoint_delete = meteoroid_cli.meteoroid.v1.endpoint:EndpointDelete
    subscription_create = meteoroid_cli.meteoroid.v1.subscription:SubscriptionCreate
    subscription_show = meteoroid_cli.meteoroid.v1.subscription:SubscriptionShow
    subscription_list = meteoroid_cli.meteoroid.v1.subscription:SubscriptionList
    subscription_delete = meteoroid_cli.meteoroid.v1.subscription:SubscriptionDelete
    result_show = meteoroid_cli.meteoroid.v1.result:ResultShow
    result_list = meteoroid_cli.meteoroid.v1.result:ResultList
    function_show = meteoroid_cli.meteoroid.v1.function:FunctionShow
    function_list = meteoroid_cli.meteoroid.v1.function:FunctionList
    function_create = meteoroid_cli.meteoroid.v1.function:FunctionCreate
    function_update= meteoroid_cli.meteoroid.v1.function:FunctionUpdate
    function_delete= meteoroid_cli.meteoroid.v1.function:FunctionDelete
